titles, prevent overflow/scroll

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,9 @@ html, body{
   padding: 0;
   width: 100%;
   height: 100%;
+  background-color: #000000;
+  color: #ffffff;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, ul, ol, p{
@@ -79,8 +82,8 @@ h1, h2, h3, h4, h5, h6, ul, ol, p{
 }
 
 .button{
-  background: #000000;
-  color: #ffffff;
+  background: #FF0000;
+  color: #000000;
   width: 100%;
   border: none;
   padding: 1rem;
@@ -90,7 +93,7 @@ h1, h2, h3, h4, h5, h6, ul, ol, p{
   box-sizing: border-box;
 }  
   .button:disabled{
-    background: #cccccc;
+    background: #000000;
     color: #000000;
   }
     .button.fake-button{
@@ -105,6 +108,7 @@ h1, h2, h3, h4, h5, h6, ul, ol, p{
   text-align: center;
   z-index: 1;
   height: var(--row-height);
+  overflow: hidden;
 }
   .app-meta > div{
     height: 1.4rem;
