--- a/client/src/components/PlayInterface.css
+++ b/client/src/components/PlayInterface.css
@@ -1,17 +1,21 @@
 .play-interface{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    background-color: #FFFFFF;
+    width: 100%; 
 }
     .select-section{
         width:100%;
+        position: relative;
     }
-    .select-section h1{
-        font-size: inherit;
-        margin: 0.3rem 0;
-        text-align: center;
-    }   
+        .select-section h1{
+            font-weight: normal;
+            font-size: inherit;        
+            text-align: center;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            background: rgb(146, 27, 18);
+        }   
 
 .select-interface{
     width: 100%;
@@ -53,7 +57,6 @@
     bottom: 0;
     right: 0;   
     margin: 0;
-    padding: 0;
     outline: 0;
     border: none;
     background: transparent;
